# skald-reworked

./: CMakeLists.txt  README.md  Readme.md  git-pull.sh  git-push.sh  git-sync.sh  setup-git-token.sh
Readme/: Readme.md
Source/: EuclideanSet.cpp  EuclideanSet.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RtMidi.cpp  RtMidi.h
